fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,7 @@ body{
     opacity: 0.8;
     padding: 20px;
     background-color: #060606;
+    margin-bottom: 10px;
 }
     
 h3{
@@ -71,7 +72,7 @@ h5{
     text-align: center;
     color: #fffefe;    
     font-size: 15px;
-    border-radius: 10px;
+    border-radius: 15px;
     opacity: 0.9;
     background-color: #060606;
 }
@@ -99,6 +100,7 @@ h5{
     border-radius: 10px;
     width: 100%;
     opacity: 0.8;
+    margin-bottom: 10px;
 
 }
 .button{
